welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (i<-0 to T.length -2) {
  ^Array1:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  T(T.length -1) = getCouleurSol()
  ^Array1:14: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  recule(T.length)
  ^Array1:15: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return (T)
  ^