welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  val T = motif()
}

def motif() : Array[Color] {
  var T = new Array[Color] (getMondeHauteur())
  
  for (i<-0 to T.length -2) {
    T(i) = getCouleurSol()
    avance()
  }
  T(T.length -1) = getCouleurSol()
  recule(T.length)
  return (T)
}